# apriltags

./: .gitignore  CMakeLists.txt  Makefile  apriltag.c  apriltag_pose.c  apriltag_quad_thresh.c  build.sh
cmake_files/: ios_cmake.cmake
example/: apriltag_demo.c  opencv_demo.cc
